# facial-emotion-recognition

./: .gitignore  README.md
research/: data_preprocessing.py  notebook.ipynb  pyproject.toml  readme.md  utils.py
